[package]
name = "tclock"
version = "0.1.0"
edition = "2024"
authors = ["Christophe Prat <christopheprat@icloud.com>"]
description = "A simple, aesthetic, and resource-efficient terminal clock with scaling and animations."
license = "MIT"
keywords = ["clock", "tui", "terminal", "aesthetic", "cli"]
categories = ["command-line-utilities", "visualization"]
repository = "https://github.com/ChristophePRAT/tclock"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
palette = "0.7.6"
